# django-test-migrations

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.dev/scripts/: ci-mysql-setup-integration-tests.sh
.github/: dependabot.yml
.github/workflows/: misspell.yml  test.yml
django_test_app/: db.sqlite3  manage.py
django_test_app/django_test_app/: settings.py  urls.py  wsgi.py
django_test_app/main_app/: apps.py  models.py  views.py
django_test_app/main_app/logic/pure/: migrations.py
django_test_app/main_app/migrations/: 0001_initial.py  0002_someitem_is_clean.py  0003_auto_20191119_2125.py  0003_update_is_clean.py  0004_auto_20191119_2125.py  0005_auto_20200329_1118.py  0006_fix_through_fields.py
django_test_migrations/: autonames.py  constants.py  exceptions.py  migrator.py  plan.py  signals.py  sql.py  types.py  typing_compat.py
django_test_migrations/checks/: autonames.py  database_configuration.py
django_test_migrations/contrib/: django_checks.py  pytest_plugin.py  unittest_case.py
django_test_migrations/db/backends/: __init__.py  exceptions.py  registry.py
django_test_migrations/db/backends/base/: configuration.py
django_test_migrations/db/backends/mysql/: configuration.py
django_test_migrations/db/backends/postgresql/: configuration.py
django_test_migrations/db/checks/: __init__.py  statement_timeout.py
django_test_migrations/logic/: datetime.py  migrations.py
tests/: conftest.py
tests/test_autonames/: conftest.py  test_autonames.py
tests/test_checks/: test_autonames.py
tests/test_contrib/test_django_checks/: test_autonames_check.py
tests/test_contrib/test_pytest_plugin/: test_plugin.py  test_pytest_plugin_direct.py  test_pytest_plugin_reverse.py  test_signals.py
tests/test_contrib/test_unittest_case/: test_signals.py  test_unittest_case.py
tests/test_db/test_backends/: test_exceptions.py  test_registry.py
tests/test_db/test_backends/test_mysql/: test_configuration.py
tests/test_db/test_backends/test_postgresql/: test_configuration.py
tests/test_db/test_checks/: test_statement_timeout_check.py
tests/test_exceptions/: test_migration_not_found.py
tests/test_logic/: test_datetime.py  test_migrations.py
tests/test_migrator/: test_fix_through_fields.py  test_migrator.py
tests/test_plan/: conftest.py  test_all_migrations.py  test_truncate_plan.py
tests/test_sql/: test_django_migrations_table_utils.py  test_drop_models_table.py  test_flush_utils.py  test_sql.py
