[project]
name = "django-test-migrations"
version = "1.4.0"
requires-python = "^3.9"
description = "Test django schema and data migrations, including ordering"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
  {name = "sobolevn", email = "mail@sobolevn.me"},
]

readme = "README.md"

repository = "https://github.com/wemake-services/django-test-migrations"

keywords = [
  "django",
  "django-tests",
  "django-migrations",
  "django-orm",
  "migrations",
  "orm",
  "sql",
  "tests",
  "test",
  "pytest",
  "pytest-plugin"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
]

dependencies = [
  "typing_extensions>=4.0"
]

[project.entry-points."pytest11"]
django_test_migrations = "django_test_migrations.contrib.pytest_plugin"


[tool.poetry.group.dev.dependencies]
django = ">=4.2,<6.0"

mypy = "^1.11"
django-stubs = "^5.0"

wemake-python-styleguide = "^0.19"
flake8-pytest-style = "^2.0"
nitpick = "^0.35"

pytest = "^8.2"
pytest-cov = ">=5,<7"
pytest-randomly = "^3.15"
pytest-django = "^4.8"
pytest-mock = "^3.14"


[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.19.2/styles/nitpick-style-wemake.toml"

